[project]
name = "wisk-ram-study"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "gurobipy>=13.0.0",
    "numpy_financial>=1.0.0",
    "geopy>=2.4.1",
    "pandas>=3.0.1,<4.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "tqdm>=4.67.3,<5.0.0",
    "scipy>=1.17.0,<2.0.0",
    "geopandas>=1.1.2,<2.0.0",
    "contextily>=1.7.0",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0,<8.0.0",
]
